# ai-platform-foundation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
argocd/: application.yaml
docs/: interview-cheatsheet.md  lessons-learned.md
docs/adr/: 0001-record-architecture-decisions.md  0002-vpc-eks-community-modules.md
docs/weekly-summaries/: week01.md
k8s/: deployment.yaml  service.yaml
src/platform_foundation/: __init__.py  app.py
terraform/: ecr.tf  github-oidc.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_app.py  test_placeholder.py
